refactoring for generating the docs